SERVER-11360 Splits can fail if the split point was once a chunk boundary

Always refresh first before performing any chunk metadata changing operation on mongos.